// Vitest Snapshot v1

exports[`combineModulesIntoPages properly combines Pages 1`] = `
{
  "/README": {
    "name": "README",
    "storyModulePath": "/README.md",
    "url": "/README",
  },
  "/docs/0-why-kitbook": {
    "name": "why kitbook",
    "storyModulePath": "/src/docs/0-why-kitbook.md",
    "url": "/docs/0-why-kitbook",
  },
  "/docs/1-get-started": {
    "name": "get started",
    "storyModulePath": "/src/docs/1-get-started.md",
    "url": "/docs/1-get-started",
  },
  "/docs/index": {
    "name": "index",
    "storyModulePath": "/src/docs/index.md",
    "url": "/docs/index",
  },
  "/docs/my-notes/0-unocss": {
    "name": "unocss",
    "storyModulePath": "/src/docs/my-notes/0-unocss.md",
    "url": "/docs/my-notes/0-unocss",
  },
  "/docs/my-notes/1-deploy-to-vercel": {
    "name": "deploy to vercel",
    "storyModulePath": "/src/docs/my-notes/1-deploy-to-vercel.md",
    "url": "/docs/my-notes/1-deploy-to-vercel",
  },
  "/lib/A": {
    "componentModulePath": "/src/lib/A.svelte",
    "name": "A",
    "url": "/lib/A",
  },
  "/lib/B": {
    "componentModulePath": "/src/lib/B.svelte",
    "name": "B",
    "storyModulePath": "/src/lib/B.svx",
    "url": "/lib/B",
  },
  "/lib/E": {
    "name": "E",
    "storyModulePath": "/src/lib/E.svx",
    "url": "/lib/E",
  },
  "/lib/a/C": {
    "componentModulePath": "/src/lib/a/C.svelte",
    "name": "C",
    "url": "/lib/a/C",
    "variantsModulePath": "/src/lib/a/C.variants.ts",
  },
  "/lib/a/D": {
    "componentModulePath": "/src/lib/a/D.svelte",
    "name": "D",
    "storyModulePath": "/src/lib/a/D.svx",
    "url": "/lib/a/D",
    "variantsModulePath": "/src/lib/a/D.variants.ts",
  },
  "/routes/+page": {
    "name": "+page",
    "pageModulePath": "/src/routes/+page.svelte",
    "url": "/routes/+page",
  },
  "/routes/a/+page": {
    "name": "+page",
    "pageModulePath": "/src/routes/a/+page.svelte",
    "storyModulePath": "/src/routes/a/_page.svx",
    "url": "/routes/a/+page",
  },
  "/routes/b/+page": {
    "name": "+page",
    "pageModulePath": "/src/routes/b/+page.svelte",
    "url": "/routes/b/+page",
    "variantsModulePath": "/src/routes/b/_page.variants.ts",
  },
  "/routes/c/+page": {
    "name": "+page",
    "pageModulePath": "/src/routes/c/+page.svelte",
    "storyModulePath": "/src/routes/c/_page.svx",
    "url": "/routes/c/+page",
    "variantsModulePath": "/src/routes/c/_page.variants.ts",
  },
}
`;

exports[`parseModules properly returns array of Pages 1`] = `
[
  {
    "ext": "md",
    "name": "README",
    "path": "/README.md",
    "url": "/README",
  },
  {
    "ext": "md",
    "name": "why kitbook",
    "path": "/src/docs/0-why-kitbook.md",
    "url": "/docs/0-why-kitbook",
  },
  {
    "ext": "md",
    "name": "get started",
    "path": "/src/docs/1-get-started.md",
    "url": "/docs/1-get-started",
  },
  {
    "ext": "md",
    "name": "index",
    "path": "/src/docs/index.md",
    "url": "/docs/index",
  },
  {
    "ext": "md",
    "name": "unocss",
    "path": "/src/docs/my-notes/0-unocss.md",
    "url": "/docs/my-notes/0-unocss",
  },
  {
    "ext": "md",
    "name": "deploy to vercel",
    "path": "/src/docs/my-notes/1-deploy-to-vercel.md",
    "url": "/docs/my-notes/1-deploy-to-vercel",
  },
  {
    "ext": "svelte",
    "name": "A",
    "path": "/src/lib/A.svelte",
    "url": "/lib/A",
  },
  {
    "ext": "svelte",
    "name": "B",
    "path": "/src/lib/B.svelte",
    "url": "/lib/B",
  },
  {
    "ext": "svx",
    "name": "B",
    "path": "/src/lib/B.svx",
    "url": "/lib/B",
  },
  {
    "ext": "svelte",
    "name": "C",
    "path": "/src/lib/a/C.svelte",
    "url": "/lib/a/C",
  },
  {
    "ext": "variants.ts",
    "name": "C",
    "path": "/src/lib/a/C.variants.ts",
    "url": "/lib/a/C",
  },
  {
    "ext": "svelte",
    "name": "D",
    "path": "/src/lib/a/D.svelte",
    "url": "/lib/a/D",
  },
  {
    "ext": "svx",
    "name": "D",
    "path": "/src/lib/a/D.svx",
    "url": "/lib/a/D",
  },
  {
    "ext": "variants.ts",
    "name": "D",
    "path": "/src/lib/a/D.variants.ts",
    "url": "/lib/a/D",
  },
  {
    "ext": "svx",
    "name": "E",
    "path": "/src/lib/E.svx",
    "url": "/lib/E",
  },
  {
    "ext": "svelte",
    "name": "+page",
    "path": "/src/routes/+page.svelte",
    "url": "/routes/+page",
  },
  {
    "ext": "svelte",
    "name": "+page",
    "path": "/src/routes/a/+page.svelte",
    "url": "/routes/a/+page",
  },
  {
    "ext": "svx",
    "name": "_page",
    "path": "/src/routes/a/_page.svx",
    "url": "/routes/a/_page",
  },
  {
    "ext": "svelte",
    "name": "+page",
    "path": "/src/routes/b/+page.svelte",
    "url": "/routes/b/+page",
  },
  {
    "ext": "variants.ts",
    "name": "_page",
    "path": "/src/routes/b/_page.variants.ts",
    "url": "/routes/b/_page",
  },
  {
    "ext": "svelte",
    "name": "+page",
    "path": "/src/routes/c/+page.svelte",
    "url": "/routes/c/+page",
  },
  {
    "ext": "svx",
    "name": "_page",
    "path": "/src/routes/c/_page.svx",
    "url": "/routes/c/_page",
  },
  {
    "ext": "variants.ts",
    "name": "_page",
    "path": "/src/routes/c/_page.variants.ts",
    "url": "/routes/c/_page",
  },
  {
    "ext": "foo.svelte",
    "name": "A",
    "path": "/src/lib/A.foo.svelte",
    "url": "/lib/A",
  },
]
`;

exports[`putPagesIntoFolders organizes Pages into proper folders 1`] = `
{
  "depth": 0,
  "folders": [
    {
      "depth": 1,
      "folders": [
        {
          "depth": 2,
          "folders": [],
          "name": "my notes",
          "pages": [
            {
              "name": "unocss",
              "storyModulePath": "/src/docs/my-notes/0-unocss.md",
              "url": "/docs/my-notes/0-unocss",
            },
            {
              "name": "deploy to vercel",
              "storyModulePath": "/src/docs/my-notes/1-deploy-to-vercel.md",
              "url": "/docs/my-notes/1-deploy-to-vercel",
            },
          ],
          "url": "/docs/my-notes",
        },
      ],
      "name": "docs",
      "pages": [
        {
          "name": "why kitbook",
          "storyModulePath": "/src/docs/0-why-kitbook.md",
          "url": "/docs/0-why-kitbook",
        },
        {
          "name": "get started",
          "storyModulePath": "/src/docs/1-get-started.md",
          "url": "/docs/1-get-started",
        },
        {
          "name": "index",
          "storyModulePath": "/src/docs/index.md",
          "url": "/docs/index",
        },
      ],
      "url": "/docs",
    },
    {
      "depth": 1,
      "folders": [
        {
          "depth": 2,
          "folders": [],
          "name": "a",
          "pages": [
            {
              "componentModulePath": "/src/lib/a/C.svelte",
              "name": "C",
              "url": "/lib/a/C",
              "variantsModulePath": "/src/lib/a/C.variants.ts",
            },
            {
              "componentModulePath": "/src/lib/a/D.svelte",
              "name": "D",
              "storyModulePath": "/src/lib/a/D.svx",
              "url": "/lib/a/D",
              "variantsModulePath": "/src/lib/a/D.variants.ts",
            },
          ],
          "url": "/lib/a",
        },
      ],
      "name": "lib",
      "pages": [
        {
          "componentModulePath": "/src/lib/A.svelte",
          "name": "A",
          "url": "/lib/A",
        },
        {
          "componentModulePath": "/src/lib/B.svelte",
          "name": "B",
          "storyModulePath": "/src/lib/B.svx",
          "url": "/lib/B",
        },
        {
          "name": "E",
          "storyModulePath": "/src/lib/E.svx",
          "url": "/lib/E",
        },
      ],
      "url": "/lib",
    },
    {
      "depth": 1,
      "folders": [
        {
          "depth": 2,
          "folders": [],
          "name": "a",
          "pages": [
            {
              "name": "+page",
              "pageModulePath": "/src/routes/a/+page.svelte",
              "storyModulePath": "/src/routes/a/_page.svx",
              "url": "/routes/a/+page",
            },
          ],
          "url": "/routes/a",
        },
        {
          "depth": 2,
          "folders": [],
          "name": "b",
          "pages": [
            {
              "name": "+page",
              "pageModulePath": "/src/routes/b/+page.svelte",
              "url": "/routes/b/+page",
              "variantsModulePath": "/src/routes/b/_page.variants.ts",
            },
          ],
          "url": "/routes/b",
        },
        {
          "depth": 2,
          "folders": [],
          "name": "c",
          "pages": [
            {
              "name": "+page",
              "pageModulePath": "/src/routes/c/+page.svelte",
              "storyModulePath": "/src/routes/c/_page.svx",
              "url": "/routes/c/+page",
              "variantsModulePath": "/src/routes/c/_page.variants.ts",
            },
          ],
          "url": "/routes/c",
        },
      ],
      "name": "routes",
      "pages": [
        {
          "name": "+page",
          "pageModulePath": "/src/routes/+page.svelte",
          "url": "/routes/+page",
        },
      ],
      "url": "/routes",
    },
  ],
  "name": ".",
  "pages": [
    {
      "name": "README",
      "storyModulePath": "/README.md",
      "url": "/README",
    },
  ],
  "url": "/",
}
`;
